feat add Boards module

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,6 +12,7 @@
     "esModuleInterop": true,
     "lib": ["ESNext", "DOM"],
     "skipLibCheck": true,
+    "strictNullChecks": false,
     "baseUrl": ".",
     "types": ["node", "element-plus/global"],
     "paths": { "@/*": [ "./src/*" ] },
