--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@vueuse/integrations": "^9.1.1",
     "axios": "^0.27.2",
     "element-plus": "^2.2.14",
+    "moment": "^2.29.4",
     "pinia": "^2.0.21",
     "vue": "^3.2.37",
     "vue-router": "^4.1.5",
