--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "vue-tabler-icons": "^2.8.0"
   },
   "devDependencies": {
-    "@types/node": "^18.8.3",
+    "@types/node": "18.8.0",
     "@vitejs/plugin-vue": "^3.1.0",
     "sass": "^1.32.7",
     "sass-loader": "^12.0.0",
